add render command

--- a/GL/ShootingGame/GLFramework.vcxproj
+++ b/GL/ShootingGame/GLFramework.vcxproj
@@ -155,15 +155,20 @@
     <ClCompile Include="Framework\Sound\Sound.cpp" />
     <ClCompile Include="Framework\Sound\WaveFile.cpp" />
     <ClCompile Include="GameScene.cpp" />
-    <ClCompile Include="Include\GLInput.cpp" />
-    <ClCompile Include="Include\Input.cpp" />
-    <ClCompile Include="Include\MofInput.cpp" />
-    <ClCompile Include="Include\WinApiInput.cpp" />
+    <ClCompile Include="Include\Input\GLInput.cpp" />
+    <ClCompile Include="Include\Input\Input.cpp" />
+    <ClCompile Include="Include\Input\MofInput.cpp" />
+    <ClCompile Include="Include\Input\WinApiInput.cpp" />
+    <ClCompile Include="Include\Render\GLRenderClearCommand.cpp" />
+    <ClCompile Include="Include\Render\GLRenderEndCommand.cpp" />
+    <ClCompile Include="Include\Render\GLRenderStartCommand.cpp" />
+    <ClCompile Include="Include\Render\GLSpriteRenderCommand.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h" />
     <ClInclude Include="Character.h" />
+    <ClInclude Include="FrameWorkManager.h" />
     <ClInclude Include="Framework\Common\Common.h" />
     <ClInclude Include="Framework\Common\Singleton.h" />
     <ClInclude Include="Framework\Framework\Framework.h" />
@@ -188,14 +193,28 @@
     <ClInclude Include="Framework\Timer\IFrameTimer.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="GameScene.h" />
-    <ClInclude Include="Include\GLInput.h" />
-    <ClInclude Include="Include\IInput.h" />
-    <ClInclude Include="Include\Input.h" />
-    <ClInclude Include="Include\InputManager.h" />
-    <ClInclude Include="Include\LogInput.h" />
-    <ClInclude Include="Include\MofInput.h" />
-    <ClInclude Include="Include\ReplayInput.h" />
-    <ClInclude Include="Include\WinApiInput.h" />
+    <ClInclude Include="Include\Render\GLSpriteRenderCommand.h" />
+    <ClInclude Include="Include\Common\ICommand.h" />
+    <ClInclude Include="Include\Common\Sprite.h" />
+    <ClInclude Include="Include\Input\GLInput.h" />
+    <ClInclude Include="Include\Input\IInput.h" />
+    <ClInclude Include="Include\Input\Input.h" />
+    <ClInclude Include="Include\Input\InputManager.h" />
+    <ClInclude Include="Include\Input\LogInput.h" />
+    <ClInclude Include="Include\Input\MofInput.h" />
+    <ClInclude Include="Include\Input\ReplayInput.h" />
+    <ClInclude Include="Include\Input\WinApiInput.h" />
+    <ClInclude Include="Include\Render\GLRenderClearCommand.h" />
+    <ClInclude Include="Include\Render\GLRenderEndCommand.h" />
+    <ClInclude Include="Include\Render\GLRenderStartCommand.h" />
+    <ClInclude Include="Include\Render\IRenderCommand.h" />
+    <ClInclude Include="Include\Render\IRenderRegister.h" />
+    <ClInclude Include="Include\Render\RenderClearCommand.h" />
+    <ClInclude Include="Include\Render\RenderCommandTask.h" />
+    <ClInclude Include="Include\Render\RenderEndCommand.h" />
+    <ClInclude Include="Include\Render\RenderManager.h" />
+    <ClInclude Include="Include\Render\RenderStartCommand.h" />
+    <ClInclude Include="Include\Render\SpriteRenderCommand.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
