--- a/GL/ShootingGame/GLFramework.vcxproj.filters
+++ b/GL/ShootingGame/GLFramework.vcxproj.filters
@@ -144,6 +144,9 @@
     <ClCompile Include="Player.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="SceneManager.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Framework\Timer\IFrameTimer.h">
@@ -319,6 +322,12 @@
     </ClInclude>
     <ClInclude Include="Include\Resource\Texture.h">
       <Filter>Include\Resource</Filter>
+    </ClInclude>
+    <ClInclude Include="SceneBase.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="SceneManager.h">
+      <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
