--- a/GL/ShootingGame/GLFramework.vcxproj.filters
+++ b/GL/ShootingGame/GLFramework.vcxproj.filters
@@ -144,8 +144,8 @@
     <ClCompile Include="Player.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="SceneManager.cpp">
-      <Filter>ソース ファイル</Filter>
+    <ClCompile Include="Include\Render\GLRenderFillRectCommand.cpp">
+      <Filter>Include\Render</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -328,6 +328,18 @@
     </ClInclude>
     <ClInclude Include="SceneManager.h">
       <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="Include\Render\RenderFillRectCommand.h">
+      <Filter>Include\Render</Filter>
+    </ClInclude>
+    <ClInclude Include="Include\Common\Rectangle.h">
+      <Filter>Include\Common</Filter>
+    </ClInclude>
+    <ClInclude Include="Include\Common\Math.h">
+      <Filter>Include\Common</Filter>
+    </ClInclude>
+    <ClInclude Include="Include\Render\GLRenderFillRectCommand.h">
+      <Filter>Include\Render</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
